Fixed issue with height 100vh preventing easy scrolling on iPhone

--- a/client/css/coffee_queue_meteor.mobile.styl
+++ b/client/css/coffee_queue_meteor.mobile.styl
@@ -1,6 +1,11 @@
 @media (max-device-width: 480px)
   html
+    height auto
+    max-height auto
+
     body
+      height auto
+      max-height auto
       font-size 2.5rem
       background-size auto 100vh
 
